# tensorflow-rust-examples

./: Cargo.toml  README.md  deny.toml
fashion_mnist/: .gitignore  Cargo.toml  README.md  generate.py
fashion_mnist/src/: main.rs
object_detection/: Cargo.toml  README.md  download_model.sh
object_detection/src/: main.rs
