[package]
name = "fmnist-sample"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.21.0", features = ["tensorflow_gpu"] }
anyhow = "1.0.70"
image = "0.24.6"
structopt = "0.3.26"
glob = "0.3.1"
