[package]
name = "fmnist-sample"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.21.0", features = ["tensorflow_gpu"] }
anyhow = "1.0.70"
image = "0.24.6"
glob = "0.3.1"
clap = { version = "4.4.6", features = ["derive"] }
